# GO_Flow_LLM

./: .gitignore  CONTRIBUTING.md  Dockerfile  README.md  create_dataset.py  curation_config_QwQ.json  curation_config_R1-Distill-Qwen32B.json  curation_config_llama3.3_70B.json  job_script.sh  job_script_baseline.sh  job_script_hla.sh  job_script_prod.sh  job_script_prod_python.sh  mirna_curation_flowchart.json  mirna_curation_flowchart_author_intent.json  mirna_curation_one_node.json  mirna_curation_prompts.json  parallel_controller.py  pyproject.toml  run_test_all.sh
.github/workflows/: main.yaml
configs/: curation_config_QwQ.json  curation_config_QwQ_HLA.json  curation_config_QwQ_baseline.json  curation_config_QwQ_multiple_targets.json  curation_config_QwQ_prod.json  curation_config_Qwen0.5B.json  curation_config_R1-Distill-Llama70B.json  curation_config_mistral_large.json  curation_config_qwen72B.json  one_node_QwQ.json
data/: fetch_production_data.py  paper_and_targets.csv
flowcharts/GO_flowchart_2025_production/: flowchart.json  prompts.json
flowcharts/HLA_updated_flowchart/: flowchart.json  prompts.json
flowcharts/disease_node_only/: flowchart.json  prompts.json
flowcharts/wiki_version/: flowchart.json  prompts.json
kubernetes/: argilla-namespace.yaml  argilla.yaml  elasticsearch.yaml  postgres.yaml  redis.yaml
src/mirna_curator/: main.py  prompt_editor.py  test_all_prompts.py  trace_viewer.py  visualisation.py
src/mirna_curator/apis/: epmc.py
src/mirna_curator/baseline/: README.md  (+1 more)
test/: validate_abstract_classification.py
(+13 files in other folders)
