[project]
name = "mirna-curator"
version = "0.1.0"
description = ""
authors = [{name="Andrew Green", email="agreen@ebi.ac.uk"}]
license = {file = "LICENSE.txt"}
readme = "README.md"

dependencies = [
  "polars>=1.12.0",
  "requests>=2.32.3",
  "pyjats>=0.0.2",
  "epmc-xml>=0.1.4",
  "guidance>=0.1.16",
  "llama-cpp-python>=0.3.2",
  "huggingface_hub>=0.26.2",
  "docling==2.4.0",
]


[project.optional-dependencies]
test = ["coverage", "pytest", "requests-mock"]